# mlops

LeL/FinalGroup/mlops/: .dockerignore  .gitignore  Dockerfile  Dockerfile.training  requirements-pipeline.txt  requirements-serving.txt  requirements-training.txt  requirements.txt
LeL/FinalGroup/mlops/data/: kubernetes_failures.csv
LeL/FinalGroup/mlops/k8s/: contour-gateway.yaml  failure-model-api.yaml  mlflow.yaml
LeL/FinalGroup/mlops/slides/: mlops.md  motivacao-2026-06-02-12-29.txt  presentation-slides.md
LeL/FinalGroup/mlops/src/: download_model.py  predict_failure.py  serve_failure_model.py  train_failure_model.py
LeL/project/: .dockerignore  .gitignore  docker-compose.yml  pyproject.toml
LeL/project/infra/api/: Dockerfile
LeL/project/infra/grafana/dashboards/: ml_api_dashboard.json
LeL/project/infra/grafana/provisioning/dashboards/: dashboards.yml
LeL/project/infra/mlflow/: Dockerfile
LeL/project/infra/prometheus/: prometheus.yml
LeL/project/scripts/: seed_data.py  wait_for_services.sh
LeL/project/src/: __init__.py  cli.py  config.py
LeL/project/src/api/: main.py  model_loader.py  schemas.py
LeL/project/src/data/: load.py  preprocess.py
LeL/project/src/features/: build_features.py
LeL/project/src/models/: promote.py  train.py
LeL/project/src/monitoring/: drift.py
LeL/project/src/pipelines/: monitoring_flow.py  training_flow.py
