[project]
name = "mlops-lel"
version = "0.1.0"
description = "Stack MLOps local completa para validação de conceitos"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Luis Neu" }]

dependencies = [
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=16.0",
    "joblib>=1.4",
    "mlflow>=2.15,<3.0",
    "boto3>=1.34",
    "prefect>=3.0,<4.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "prometheus-client>=0.20",
    "prometheus-fastapi-instrumentator>=7.0",
    "pandera>=0.20",
    "evidently>=0.4.30,<0.5",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "ipykernel>=6.29",
    "jupyter>=1.0",
]

[project.scripts]
mlops = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "integration: marks tests as integration (require services running)",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict_optional = false
